--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,13 +1,25 @@
 hr.solid {
-  border-top: 2px solid #336b9f;
+  border-top: 2px solid white;
+}
+.footer-tbody {
+  color: white;
 }
 .footer-main-div {
-  background-image: url(../../assets/wave.svg);
+  /* background-image: url(../../assets/wave.svg); */
+  background-color: #336b9f;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 70vh;
+  min-height: 50vh;
   width: 100%;
+  color: white;
+}
+.footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 2rem;
 }
 .footer-table,
 .footer-table-row {
@@ -15,23 +27,35 @@ hr.solid {
   margin: 1rem 0;
 }
 .footer-thead-tr th {
+  color: white;
+  font-size: 1.4rem;
 }
 
 .footer-tbody {
+  color: white;
 }
 .footer-tbody-tr {
+  color: white;
 }
 .footer-tbody-tr td {
+  color: white;
 }
 .socialMedia-td {
   display: flex;
   justify-contnet: space-between;
   align-items: center;
   flex-direction: row;
+  color: white;
+}
+.footer-thead-rights {
+  border-top: 1px solid white;
+  margin: 2rem 0;
+  padding: 1rem;
 }
 .footer-thead-rights > tr > p {
   display: flex;
   justify-contnet: center;
   align-items: center;
+  color: white;
   tex-align: center;
 }
