--- a/src/Components/LandingPage/ServicesSection/ServicesSection.css
+++ b/src/Components/LandingPage/ServicesSection/ServicesSection.css
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  clip-path: polygon(0 13%, 100% 0, 100% 85%, 0% 100%);
+  /* clip-path: polygon(0 13%, 100% 0, 100% 85%, 0% 100%); */
   min-height: 100vh;
 }
 
@@ -80,6 +80,7 @@
 }
 .card-title {
   text-shadow: rgb(0 0 0) 0px 1px 5px;
+  color: white;
 }
 .card-paragraph {
   color: white !important;
@@ -91,6 +92,25 @@
 .card-button {
   color: white !important;
   border: 2px solid white !important;
-  padding: 0.2rem 2rem !important;
   text-shadow: none !important;
+}
+.card-body {
+  max-height: 100% !important;
+}
+.card-col {
+  height: 300px !important;
+}
+.card-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+}
+.card-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.svg-container {
+  margin-bottom: 2rem;
 }
