--- a/src/Components/LandingPage/Communities/CommunitiesSection.css
+++ b/src/Components/LandingPage/Communities/CommunitiesSection.css
@@ -19,12 +19,16 @@ hr.solid {
 .houseCardInfo {
   font-weight: 600;
   color: #262525;
+  text-align: center;
 }
 
 .card-img:hover {
 }
 p {
   font-size: 11px;
+}
+.card-address {
+  font-size: 1.1rem;
 }
 .card-div-container {
   border: 2.5px solid lightgray;
@@ -126,4 +130,10 @@ span {
   justify-content: flex-start;
   flex-direction: column;
   width: 100%;
+}
+.carousel-container {
+  padding: 2rem 0;
+}
+.communities-section {
+  margin: 5rem 0;
 }
