--- a/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
+++ b/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
@@ -1,3 +1,20 @@
+.full-bg-image-featured-page {
+  background-color: #336b9f;
+
+  /* background-image: linear-gradient(
+    to bottom,
+    rgba(179, 209, 243, 0.95),
+    rgba(38, 94, 137, 0.95)
+  );
+  url(../../../assets/pattern2.jpg); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* background-attachment: fixed; */
+  /* clip-path: polygon(0 13%, 100% 0, 100% 85%, 0% 100%); */
+  padding-bottom: 2rem;
+}
+
 .masonary-pic {
   width: 100%;
   height: 100%;
@@ -78,4 +95,9 @@
   font-size: 24px;
   padding: 2rem 32px;
   font-weight: 600;
+}
+.h1-title {
+  font-weight: 600;
+  margin-top: 3rem;
+  text-shadow: rgb(0 0 0) 0px 1px 5px;
 }
