--- a/src/Components/LandingPage/ServicesSection/ServicesSection.css
+++ b/src/Components/LandingPage/ServicesSection/ServicesSection.css
@@ -1,14 +1,15 @@
 .services-full-bg-image {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(179, 209, 243, 0.52),
-      rgba(38, 94, 137, 0.73)
-    ),
-    url(../../../assets/servicesPic.jpg);
+  background-color: #336b9f;
+  /* background-image: linear-gradient(
+    to bottom,
+    rgba(179, 209, 243, 0.95),
+    rgba(38, 94, 137, 0.95)
+  ); */
+  /* url(../../../assets/servicesPic.jpg); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
+  /* background-attachment: fixed; */
   /* clip-path: polygon(0 13%, 100% 0, 100% 85%, 0% 100%); */
   min-height: 100vh;
 }
@@ -81,6 +82,8 @@
 .card-title {
   text-shadow: rgb(0 0 0) 0px 1px 5px;
   color: white;
+  font-weight: 600 !important;
+  font-size: 2rem !important;
 }
 .card-paragraph {
   color: white !important;
@@ -93,9 +96,11 @@
   color: white !important;
   border: 2px solid white !important;
   text-shadow: none !important;
+  margin: 3rem 0 !important;
 }
 .card-body {
   max-height: 100% !important;
+  text-align: center !important;
 }
 .card-col {
   height: 300px !important;
