--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 body {
   margin-top: 7rem !important;
+  &::-webkit-scrollbar:horizontal {
+    height: 0;
+    width: 0;
+    display: none;
+  }
+
+  &::-webkit-scrollbar-thumb:horizontal {
+    display: none;
+  }
 }
