--- a/src/Components/LandingPage/AgentsSection/AgentsDisplay.css
+++ b/src/Components/LandingPage/AgentsSection/AgentsDisplay.css
@@ -10,13 +10,15 @@
   justify-content: center;
   align-items: center;
 }
+.agentsCard {
+  margin-bottom: 7rem;
+}
 .contact-button {
   padding: 0.4rem 0;
-  border-radius: 2em;
   background-color: #336b9f;
   color: white;
   font-size: 11px !important;
-  width: 50%;
+  width: 100%;
   margin-top: 1rem;
 }
 .card-content-component {
@@ -28,6 +30,7 @@
 }
 .userName-name {
   text-align: center;
+  font-weight: 600 !important;
 }
 .card-div {
   display: flex;
@@ -63,27 +66,33 @@
 }
 .content-div {
   display: flex;
-  justify-content: space-between !important;
+  justify-content: center !important;
   align-items: center;
   flex-direction: column;
+}
+.agent-card-row {
+  display: flex;
+  justify-content: center !important;
+  align-items: center;
+  border: 2px solid lightgray;
+  margin: 0.5rem;
+  padding: 1rem;
 }
 .connect-agent-mainRow {
   margin-top: 3rem;
 }
+.connect-agent-image {
+  max-width: 100%;
+  height: auto;
+}
 .connect-agent-image-col {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 .connect-agent-col {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.connect-agent-image {
-  max-width: 100%;
-  height: auto;
-}
+
 .connect-agent-content {
   display: flex;
   justify-content: center;
@@ -139,11 +148,14 @@
 }
 .connect-agent-mainRow {
   background-color: #336b9f;
-  margin-bottom: 2rem;
   padding: 2rem;
 }
 .connect-agent-content {
   background-color: white;
   padding: 2rem;
-  border-radius: 4rem;
+}
+.agents-div {
+}
+.carousel-main-items-div {
+  padding: 0 3rem;
 }
