--- a/src/Components/LandingPage/ListingsCarousel/ListingsCarousel.css
+++ b/src/Components/LandingPage/ListingsCarousel/ListingsCarousel.css
@@ -1,4 +1,5 @@
-.card-div-container {
+.sections-main-container {
+  margin: 9rem 0;
 }
 .subtitle {
   text-align: left;
@@ -15,7 +16,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin: 2rem 0;
 }
 .h3-title {
   font-weight: 600;
