--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,7 +6,7 @@ hr.solid {
 }
 .footer-main-div {
   /* background-image: url(../../assets/wave.svg); */
-  background-color: #336b9f;
+  background-color: #18446c;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
