--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
 body {
-  margin-top: 7rem !important;
-  &::-webkit-scrollbar:horizontal {
-    height: 0;
-    width: 0;
-    display: none;
-  }
-
-  &::-webkit-scrollbar-thumb:horizontal {
-    display: none;
-  }
+  background-color: white !important;
 }
