--- a/src/Components/LandingPage/Communities/CommunitiesSection.css
+++ b/src/Components/LandingPage/Communities/CommunitiesSection.css
@@ -1,8 +1,8 @@
 .communities-container {
-  background-color: white;
+  background-color: white !important;
 }
 .communities-section-title {
-  background-color: white;
+  background-color: white !important;
   margin: 3rem 0;
   padding: 3rem 0;
 }
@@ -18,7 +18,9 @@ hr.solid {
   border-top: 1.5px solid #000;
 }
 .box-shadow-customized {
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px !important;
+  border: 1px solid lightgray;
+  box-shadow: none !important;
+  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px !important; */
 }
 .houseCardInfo {
   font-weight: 600;
@@ -35,8 +37,7 @@ p {
   font-size: 1.1rem;
 }
 .card-div-container {
-  border: 2.5px solid lightgray;
-  margin: 0.3rem;
+  /* border: 2.5px solid lightgray; */
   border-radius: 0.48em;
 }
 
@@ -59,9 +60,8 @@ p {
   top: 5px;
   left: -2px;
   width: calc(100% + 6px);
-
   height: calc(100% - 10px);
-  background-color: #ffffff;
+  background-color: white !important;
   transition: all 0.5s ease-in-out;
   transform: scaleY(1);
 }
@@ -76,9 +76,8 @@ p {
   left: 5px;
   top: -5px;
   width: calc(100% - 10px);
-
   height: calc(100% + 10px);
-  background-color: #ffffff;
+  background-color: white !important;
   transition: all 0.5s ease-in-out;
   transform: scaleX(1);
 }
@@ -123,7 +122,7 @@ span {
   align-items: center;
   position: absolute;
   margin: 1rem;
-  background: white;
+  background-color: white !important;
   clip-path: circle(50% at 50% 50%);
   padding: 0.2rem;
 }
@@ -135,8 +134,12 @@ span {
   flex-direction: column;
   width: 100%;
 }
+.col-card-component {
+  margin: 0.5rem 0;
+}
 .carousel-container {
-  padding: 2rem 0;
+  padding-bottom: 4rem;
+  padding-top: 1rem;
 }
 .communities-section {
   margin: 5rem 0;
