--- a/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
+++ b/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
@@ -14,9 +14,13 @@
   /* clip-path: polygon(0 13%, 100% 0, 100% 85%, 0% 100%); */
   padding-bottom: 2rem;
 }
-
+.headLines-div-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 .masonary-pic {
-  width: 100%;
   height: 100%;
   cursor: pointer;
   border-radius: 1em;
@@ -102,7 +106,7 @@
   text-shadow: rgb(0 0 0) 0px 1px 5px;
 }
 .FeaturedCard-div-container {
-  padding: 0 6rem;
+  /* padding: 0 6rem; */
   display: flex;
   justify-content: center;
   align-items: center;
