--- a/src/Components/LandingPage/ServicesSection/ServicesSection.css
+++ b/src/Components/LandingPage/ServicesSection/ServicesSection.css
@@ -11,7 +11,6 @@
   background-size: cover;
   /* background-attachment: fixed; */
   /* clip-path: polygon(0 13%, 100% 0, 100% 85%, 0% 100%); */
-  min-height: 100vh;
 }
 
 .servicesSection-h1 {
@@ -23,8 +22,9 @@
   line-height: 1;
   text-align: center;
   position: relative;
-  padding: 2rem;
-  margin-top: 4rem;
+  padding: 0rem;
+  margin-top: 3rem;
+  margin-bottom: 1.2rem;
   text-shadow: rgb(0 0 0) 0px 1px 5px;
 }
 .servicesSection-h1 span {
@@ -45,14 +45,14 @@
   align-items: baseline;
   hieght: 100%;
 }
-.card-body:hover {
+/* .card-body:hover {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 14px 28px, rgba(0, 0, 0, 0.1) 0px 10px 10px;
   background-image: linear-gradient(
     to bottom,
     rgba(179, 209, 243, 0.3),
     rgba(38, 94, 137, 0.3)
   );
-}
+} */
 .card-body {
   background-color: transparent !important;
   display: flex;
