--- a/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
+++ b/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
@@ -19,6 +19,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  flex-direction: column;
 }
 .masonary-pic {
   height: 100%;
