--- a/src/Components/LandingPage/HomeSection/HomeSection.css
+++ b/src/Components/LandingPage/HomeSection/HomeSection.css
@@ -21,17 +21,26 @@
   text-align: center;
   position: relative;
   text-shadow: rgb(0 0 0) 0px 2px 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .homeSection-h1-span {
   color: #68b3f9;
-  text-shadow: rgb(0 0 0) 1px 0px 1px;
+  text-shadow: rgb(0 0 0) 0px 2px 5px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0.4rem;
+  padding-bottom: 0.25rem;
 }
 .homeSection-cntent {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  min-height: 65vh;
+  min-height: 75vh;
   flex-direction: column;
   postion: realtive;
 }
