--- a/src/Components/CommunitiesPage/CommunitiesPage.css
+++ b/src/Components/CommunitiesPage/CommunitiesPage.css
@@ -62,6 +62,7 @@
 }
 .title-row-h1 {
   margin: 2rem 0;
+  font-size: 2.5rem;
 }
 
 .searchBox {
@@ -97,7 +98,7 @@
   border: 1px solid rgba(51, 107, 159, 1);
   color: rgba(51, 107, 159, 1);
   background-color: transparent;
-  border-radius: 0.3em;
+  border-radius: 0em;
   padding: 0.35rem 0.8rem;
 }
 .area-tbody,
@@ -114,14 +115,14 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0.5rem;
   border-bottom: 0.5px solid lightgray;
 }
 .area-tbody tr td {
-  text-align: left;
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  padding: 0 0.1rem;
 }
 .area-thead tr th h5 {
   texr-align: center;
@@ -137,7 +138,8 @@ td {
   color: white;
 }
 .searchBox-col-searchBar {
-  border: 1px solid lightgray;
+  /* border: 1px solid lightgray; */
+  /* max-height: 200px; */
 }
 .pagination-div {
   width: 100%;
@@ -145,4 +147,50 @@ td {
   align-items: center;
   justify-content: center;
   margin-bottom: 1rem;
+}
+.listtingTab-col {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0.5rem 0;
+}
+.right-td {
+  text-align: center;
+  display: flex;
+  justify-content: flex-end;
+  aling-items: center;
+  width: fit-content;
+}
+.breadcrumbs-arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.pagination-div {
+  display: flex;
+  justify-content: flex-end;
+}
+.pagination-div-2 {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.selected {
+  background-color: rgba(51, 107, 159, 0.8);
+  color: white;
+  border-radius: 50%;
+  padding: 0.3rem 0.7rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.not-selected {
+  padding: 0.3rem 0.7rem;
+}
+.full-card {
+  display: flex !important;
+  justifycontent: center !important;
+  alignitems: center !important;
+  border: 1px solid lightgray !important;
+  margintop: 2rem 0 !important;
 }
