--- a/src/Components/SearchBarFolder/SearchBar.css
+++ b/src/Components/SearchBarFolder/SearchBar.css
@@ -8,8 +8,8 @@
   color: #4a4a4a;
   display: block;
   line-height: 2.2rem;
-  padding: 16px 19px;
-  padding-right: 3.5rem;
+  /* padding: 16px 19px;
+  padding-right: 3.5rem; */
   border: none;
   outline: none;
 }
@@ -20,7 +20,7 @@ button[type="submit"] {
   color: #4a4a4a;
   display: block;
   line-height: 2.2rem;
-  padding: 16px 19px;
+  /* padding: 16px 19px; */
 }
 .searchBar_container {
   display: flex;
