--- a/src/Components/MapListting/app.css
+++ b/src/Components/MapListting/app.css
@@ -1,5 +1,5 @@
 #app-map {
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%;
 }
 
@@ -9,7 +9,34 @@
 }
 
 /* ------------- Popup ------------- */
-
+.sc-form {
+  position: absolute;
+  background-color: white;
+  z-index: 10;
+  padding: 1rem 4rem;
+  height: 150px;
+  overflow-y: auto;
+  border: 1px solid lightgray;
+  border-bottom: 2px solid #1976d2;
+}
+.sc-form-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.filter-drawer-button {
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  border: 1px solid lightgray;
+  margin: 0.1rem 0;
+  outline: none;
+  color: rgb(100 100 100);
+}
+.header-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 .mapboxgl-popup-content {
   width: 20rem;
 }
