--- a/src/Components/MapListting/page.css
+++ b/src/Components/MapListting/page.css
@@ -16,7 +16,11 @@
   opacity: 1;
   visibility: visible;
 }
-
+.sc-form-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .app-page {
   display: flex;
   flex-direction: column;
