--- a/src/Components/CommunitiesPage/CommunitiesPage.css
+++ b/src/Components/CommunitiesPage/CommunitiesPage.css
@@ -381,18 +381,26 @@ input[type="checkbox"] {
   justify-content: center;
   align-items: center;
   padding: 0.5rem 1rem;
-  border: 1px solid lightgray;
   font-weight: 600;
-  color: rgba(90, 90, 90);
-  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  color: rgb(25, 118, 210);
 }
 
 table.comparable-sales-table {
-  border-collapse: separate;
-  border-spacing: 1.5em 3em;
+  border-collapse: collapse;
+  width: 100%;
+  text-align: center;
+  height: 100%;
+}
+.table-container {
+  height: 400px;
+}
+.comparable-sales-table-tr {
+  border-bottom: 1px solid lightgray;
+  text-align: left;
 }
 .comparable-sales-table-tr th {
   font-weight: 600;
+  text-align: left;
 }
 .react-images__blanket {
   z-index: 1800 !important;
@@ -411,4 +419,86 @@ table.comparable-sales-table {
   display: block;
   transition: top 0.3s;
   z-index: 100 !important;
+}
+.react-multiple-carousel__arrow::before {
+  color: black !important;
+  font-weight: 600;
+}
+.react-multiple-carousel__arrow {
+  background-color: transparent !important;
+}
+.react-multiple-carousel__arrow--left::before {
+  text-align: left !important;
+}
+.react-multiple-carousel__arrow--right::before {
+  text-align: right !important;
+}
+
+.AppearingNavbar-container {
+  background-color: #eeeeee;
+}
+.property-detailed-description {
+  /* overflow-y: auto; */
+  overflow: hidden;
+}
+.property-detailed-description-popup {
+  /* overflow-y: auto; */
+}
+/*-----------------toggler button----------*/
+.togglerMeesButtons-div {
+  background-color: #cfcfd5;
+  border-radius: 0.5em;
+  display: flex;
+  justify-content: center;
+  alignitems: center;
+  margin-top: 1rem;
+}
+.activeMeetButton {
+  background-color: white;
+  border-radius: 0.5em;
+  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  width: 100%;
+  font-weight: 600;
+  transition: height 0.3s linear, width 0.3s linear, left 0.3s linear,
+    top 0.3s linear, transform 0.3s linear, background-color 0.3s linear;
+}
+.notActive {
+  background-color: #cfcfd5;
+  border-radius: 0.5em;
+  width: 100%;
+  font-weight: 600;
+  transition: height 0.3s linear, width 0.3s linear, left 0.3s linear,
+    top 0.3s linear, transform 0.3s linear, background-color 0.3s linear;
+}
+.react-multiple-carousel__arrow::before {
+  font-size: 12px !important;
+}
+
+.input-group-text {
+  min-width: 160px !important;
+}
+/* Main site body */
+.reqInfoButton,
+.scheduleButton {
+  border-top: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+}
+.noneSelected {
+  border-radius: 1em;
+}
+.test {
+  position: fixed !important;
+  background: white;
+  top: 9.8rem;
+  right: 0;
+  width: 38% !important;
+  display: flex !important;
+  z-index: 1 !important ;
+  marginbottom: 1rem;
+}
+.time-item li {
+  width: 60px !important;
+  margin: 0 0.1rem;
 }
