--- a/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
+++ b/src/Components/LandingPage/FeaturedProperties/FeaturedProperties.css
@@ -1,5 +1,5 @@
 .full-bg-image-featured-page {
-  background-color: #336b9f;
+  background-color: #ffa840;
 
   /* background-image: linear-gradient(
     to bottom,
