--- a/src/Components/CommunitiesPage/CommunitiesPage.css
+++ b/src/Components/CommunitiesPage/CommunitiesPage.css
@@ -77,7 +77,7 @@
   align-items: center;
   justify-content: space-between;
   flex-direction: column;
-  /* border: solid 6px #336b9f; */
+  /* border: solid 6px #ffa840; */
   padding: 1rem;
   background-color: rgba(200, 200, 200, 0);
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
@@ -150,7 +150,7 @@ td {
   cursor: pointer;
 }
 .searchBox-button {
-  background-color: #336b9f;
+  background-color: #ffa840;
   color: white;
 }
 .searchBox-col-searchBar {
