--- a/src/Components/LandingPage/AgentsSection/AgentsDisplay.css
+++ b/src/Components/LandingPage/AgentsSection/AgentsDisplay.css
@@ -6,7 +6,7 @@
   border-radius: 50%;
   height: 130px;
   width: 130px;
-  box-shadow: #336b9f 0px 0px 0px 3px;
+  box-shadow: #ffa840 0px 0px 0px 3px;
 }
 .image-div {
   display: flex;
@@ -18,7 +18,7 @@
 }
 .contact-button {
   padding: 0.3rem 0.2rem;
-  background-color: #336b9f;
+  background-color: #ffa840;
   color: white;
   font-size: 14.5px !important;
   width: 100%;
@@ -127,8 +127,8 @@
   width: 100% !important;
 }
 .form-button {
-  border: 1px solid rgb(51, 107, 159) !important;
-  background-color: rgb(51, 107, 159) !important;
+  border: 1px solid #ffa840 !important;
+  background-color: #ffa840 !important;
   color: white !important;
   margin: 2rem 0 !important;
   padding: 0.5rem 2rem !important;
@@ -150,7 +150,7 @@
   fill: #52a9ff;
 }
 .connect-agent-mainRow {
-  background-color: #336b9f;
+  background-color: #ffa840;
   padding: 2rem;
 }
 .connect-agent-content {
